@@ -1,5 +1,9 @@
 2002-09-26  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/sp-shape.c (sp_shape_print): Clear pixelstore
+
+	* src/sp-chars.c (sp_chars_print_bpath): Clear pixelstore before each rendering
+
 	* src/sp-gradient.c (sp_rg_fill): Oops, moved declaration before statements
 	(sp_rg_fill): Ditto
 
